mattermost/10-mattermost-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mattermost
  namespace: mattermost
  labels:
    app: mattermost
    type: statefulset
spec:
  serviceName: "mattermost"
  replicas: 1
  selector:
    matchLabels:
      app: mattermost
      type: pod
  template:
    metadata:
      labels:
        app: mattermost
        type: pod
    spec:
      containers:
      - name: mattermost
        image: mattermost/mattermost-team-edition:latest
        ports:
        - containerPort: 8065
        volumeMounts:
        - mountPath: /mattermost/data
          name: data
        - mountPath: /mattermost/logs
          name: logs
        - mountPath: /mattermost/config
          name: config
        - mountPath: /mattermost/plugins
          name: plugins
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
      - name: logs
        persistentVolumeClaim:
          claimName: logs
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: plugins
        persistentVolumeClaim:
          claimName: plugins
